--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head id="green-head-1">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chloe Smith Portfolio | Home </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="CSS/Stylesheet1.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Mansalva&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mansalva&display=swap"
-    rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
-<body>
-  <main>
+<body id="green-body-1">
+  <main id="green-main-1">
     <header class="sticky-top header">
 
       <!--Drop down list for nav bar-->
 
-      <div class="navbar-column">
+      <div id="green" class="navbar-column">
         <nav class="navbar bg-body-tertiary">
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -54,19 +40,19 @@
                     <a class="nav-link" href="HTML/about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="HTML/resume.html">Resume</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="HTML/skills.html">Skills</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Testimonials</a>
+                    <a class="nav-link" href="HTML/testimonials.html">Testimonials</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="HTML/projects.html">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="HTML/contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -82,16 +68,22 @@
           <h1 class="my-name">Chloe Smith</h1>
           <p class="i-want-to-be">aspiring web developer</p>
         </div>
-        <div class="button-container">
+        <div class="home-button-container">
+          <a href="https://www.linkedin.com/in/chloe-smith-1b0400294?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
           <button class="linkedin-btn">Linkedin</button>
+        </a>
+        <a href="https://chlowus.github.io/Images---Bootstrap-Project/Chloe%20cv.pdf">
           <button class="cv-btn">CV</button>
+        </a>
+        <a href="https://github.com/Chlowus">
           <button class="github-btn">Github</button>
+        </a>
         </div>
-        <img src="Images/squiggle.png" alt="squiggle" class="home-page-squiggle">
+        <img src="https://chlowus.github.io/Images---Bootstrap-Project/squiggle.png" alt="squiggle" class="home-page-squiggle">
       </div>
 
       <div class="home-page-image-container">
-        <img src="Images/Chloe green.png" alt="chloe animation" class="chloe-animation">
+        <img src="https://chlowus.github.io/Images---Bootstrap-Project/Chloe%20green.png" alt="chloe animation" class="chloe-animation">
       </div>
     </div>
     <footer class="home-page-footer">
