--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -11,31 +11,18 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet"
     href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-  <link rel="stylesheet" href="../CSS/Stylesheet4.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Mansalva&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mansalva&display=swap"
-    rel="stylesheet">
+  <link rel="stylesheet" href="../CSS/Stylesheet1.css">
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </head>
 
-<body>
+<body class="skills-page-body">
   <header class="sticky-top header">
 
     <!--Drop down list for nav bar-->
-    <div class="navbar-column">
+    <div id="blue" class="navbar-column">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -57,19 +44,19 @@
                   <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Resume</a>
+                  <a class="nav-link" href="../HTML/resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Skills</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Testimonials</a>
+                  <a class="nav-link" href="../HTML/testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="../HTML/projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="../HTML/contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -78,18 +65,19 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main class="skills-page-main">
 
 
     <!--BODY-->
     <div class="skills-container">
       <h1 class="skills-text">Skills</h1>
       <!-- <img src="Images/Orange Squiggle.png" alt="orange squiggle" class="about-page-squiggle"> -->
-      <div class="about-container-2" data-aos="fade-right" data-aos-duration="3000">
+      <div class="skills-container-2" data-aos="fade-right" data-aos-duration="3000">
         <!--1st column-->
         <div class="html-icon">
           <h3>HTML</h3>
           <i class="lab la-html5"></i>
+          <h4>Intermediate</h4>
         </div>
 
 
@@ -97,6 +85,7 @@
         <div class="css-icon">
           <h3>CSS</h3>
           <i class="lab la-css3-alt"></i>
+          <h4>Beginner</h4>
         </div>
 
 
@@ -104,13 +93,14 @@
         <div class="bootstrap-icon">
           <h3>Bootstrap</h3>
           <i class="lab la-bootstrap"></i>
+          <h4>Beginner</h4>
         </div>
 
 
       </div>
     </div>
     <!--FOOTER-->
-    <footer class="home-page-footer">
+    <footer class="skills-page-footer">
       <p>&copy;Chloe Smith|2024|All Rights Reserved</p>
     </footer>
   </main>
