--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,30 +7,17 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../CSS/Stylesheet2.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Mansalva&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Mansalva&display=swap"
-    rel="stylesheet">
+  <link rel="stylesheet" href="../CSS/Stylesheet1.css">
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
-<body>
+<body class="about-page-main">
     <main>
         <header class="sticky-top header">
     
           <!--Drop down list for nav bar-->
-          <div class="navbar-column">
+          <div id="orange" class="navbar-column">
             <nav class="navbar bg-body-tertiary">
               <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -49,22 +36,22 @@
                             <a class="nav-link" href="../index.html">Home</a>
                           </li>
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About</a>
+                        <a class="nav-link active" aria-current="page" href="./about.html">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Resume</a>
+                        <a class="nav-link" href="./">Resume</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="skills.html">Skills</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Testimonials</a>
+                        <a class="nav-link" href="./testimonials.html">Testimonials</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../HTML/projects.html">Projects</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -103,7 +90,7 @@
         </div>
         </div>
         <!--FOOTER-->
-        <footer class="home-page-footer">
+        <footer class="about-page-footer">
           <p>&copy;Chloe Smith|2024|All Rights Reserved</p>
         </footer>
       </main> 
