--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -42,7 +42,7 @@
                           <a class="nav-link" href="about.html">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Resume</a>
+                        <a class="nav-link active" aria-current="page" href="./resume.html">Resume</a>
                     </li>
                       <li class="nav-item">
                           <a class="nav-link" href="../HTML/skills.html">Skills</a>
